--- a/Sharie/Sharie.csproj
+++ b/Sharie/Sharie.csproj
@@ -11,6 +11,12 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Sources\Sharie.Logic.Interfaces\Sharie.Logic.Interfaces\Sharie.Logic.Interfaces.csproj" />
+    <ProjectReference Include="..\Sources\Sharie.Logic\Sharie.Logic\Sharie.Logic.csproj" />
+    <ProjectReference Include="..\Sources\Sharie.Models\Sharie.Models\Sharie.Models.csproj" />
+  </ItemGroup>
+
 
 
 </Project>
