--- a/Sources/Sharie.Tests/Sharie.Tests.csproj
+++ b/Sources/Sharie.Tests/Sharie.Tests.csproj
@@ -23,6 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Sharie.Logic.Interfaces\Sharie.Logic.Interfaces.csproj" />
+    <ProjectReference Include="..\Sharie.Logic\Sharie.Logic.csproj" />
+    <ProjectReference Include="..\Sharie.Models\Sharie.Models.csproj" />
     <ProjectReference Include="..\Sharie\Sharie.csproj" />
   </ItemGroup>
 
