--- a/Sources/Sharie/Sharie.csproj
+++ b/Sources/Sharie/Sharie.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -12,9 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Sources\Sharie.Logic.Interfaces\Sharie.Logic.Interfaces\Sharie.Logic.Interfaces.csproj" />
-    <ProjectReference Include="..\Sources\Sharie.Logic\Sharie.Logic\Sharie.Logic.csproj" />
-    <ProjectReference Include="..\Sources\Sharie.Models\Sharie.Models\Sharie.Models.csproj" />
+    <ProjectReference Include="..\Sharie.Logic.Interfaces\Sharie.Logic.Interfaces.csproj" />
+    <ProjectReference Include="..\Sharie.Logic\Sharie.Logic.csproj" />
+    <ProjectReference Include="..\Sharie.Models\Sharie.Models.csproj" />
   </ItemGroup>
 
 
