--- a/Sources/Sharie.Tests/Sharie.Tests.csproj
+++ b/Sources/Sharie.Tests/Sharie.Tests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="3.1.2" />
+    <PackageReference Include="Microsoft.CodeCoverage" Version="16.5.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="Tests.AAAPattern.xUnit" Version="4.8.1.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
